ModalEditInteraction + spotbot command tests